added styles to search page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,5 +36,6 @@
 @import 'components/woocommerce/tabs';
 @import 'components/woocommerce/cart';
 @import 'components/woocommerce/checkout';
+@import 'components/wordpress/search';
 @import 'components/column-wrap';
 @import 'components/footer/footer';
