--- a/style.css
+++ b/style.css
@@ -2963,6 +2963,126 @@ h1 {
       background: transparent;
       color: #a82e37; }
 
+.search main {
+  padding: 3em 0; }
+
+.search h2 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 28px;
+  font-style: normal;
+  letter-spacing: .125em;
+  margin: 0; }
+
+.search h3 {
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: .125em;
+  margin-bottom: .5em; }
+
+.search .search-results {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 2em 0;
+  width: 100%; }
+
+.search .page,
+.search .post {
+  width: 100%;
+  margin-bottom: 1em;
+  background: #fff;
+  padding: 1.5em;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25); }
+
+.search .product {
+  width: calc((100% / 4) - ((3 * 15px) / 4));
+  margin-right: 15px;
+  margin-bottom: 20px;
+  background: #fff;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25); }
+  @media screen and (max-width: 1024px) {
+    .search .product {
+      width: calc((100% / 3) - ((2 * 15px) / 3)); } }
+  @media screen and (max-width: 768px) {
+    .search .product {
+      width: calc((100% / 2) - ((1 * 15px) / 2)); } }
+  @media screen and (max-width: 560px) {
+    .search .product {
+      width: 100%;
+      margin-right: 0; } }
+  .search .product.fade-in {
+    opacity: 1;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none; }
+  .search .product .loop-content {
+    padding: 1.5em; }
+  @media screen and (max-width: 768px) {
+    .search .product:nth-of-type(2n) {
+      margin-right: 0; } }
+  @media screen and (max-width: 560px) {
+    .search .product:nth-of-type(2n) {
+      margin-right: 0; } }
+  @media screen and (max-width: 1024px) {
+    .search .product:nth-of-type(3n) {
+      margin-right: 0; } }
+  @media screen and (max-width: 768px) {
+    .search .product:nth-of-type(3n) {
+      margin-right: 15px; } }
+  @media screen and (max-width: 560px) {
+    .search .product:nth-of-type(3n) {
+      margin-right: 0; } }
+  .search .product:nth-of-type(4n) {
+    margin-right: 0; }
+    @media screen and (max-width: 1024px) {
+      .search .product:nth-of-type(4n) {
+        margin-right: 15px; } }
+    @media screen and (max-width: 768px) {
+      .search .product:nth-of-type(4n) {
+        margin-right: 0; } }
+    @media screen and (max-width: 560px) {
+      .search .product:nth-of-type(4n) {
+        margin-right: 0; } }
+  @media screen and (max-width: 1024px) {
+    .search .product:nth-of-type(6n) {
+      margin-right: 0; } }
+  @media screen and (max-width: 768px) {
+    .search .product:nth-of-type(6n) {
+      margin-right: 0; } }
+  @media screen and (max-width: 560px) {
+    .search .product:nth-of-type(6n) {
+      margin-right: 0; } }
+  @media screen and (max-width: 1024px) {
+    .search .product:nth-of-type(12n) {
+      margin-right: 0; } }
+  @media screen and (max-width: 560px) {
+    .search .product:nth-of-type(12n) {
+      margin-right: 0; } }
+  .search .product figure {
+    overflow: hidden;
+    position: relative;
+    width: 100%; }
+    .search .product figure::after {
+      display: block;
+      content: '';
+      padding-bottom: 100%; }
+    .search .product figure img {
+      width: 100%;
+      transition: all 0.3s ease;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+  .search .product:hover figure img {
+    opacity: .9; }
+
 .column-wrap {
   display: -webkit-flex;
   display: -ms-flexbox;
