--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,7 @@
 @import 'components/woocommerce/tabs';
 @import 'components/woocommerce/cart';
 @import 'components/woocommerce/checkout';
+@import 'components/woocommerce/woocommerce-order-received';
 @import 'components/wordpress/search';
 @import 'components/column-wrap';
 @import 'components/footer/footer';
