--- a/scss/components/content/_title-container.scss
+++ b/scss/components/content/_title-container.scss
@@ -3,12 +3,14 @@
   overflow: hidden;
   background-attachment: fixed;
   background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat;
   color: $color-neutral-brightest;
   position: relative;
 
-  @media screen and (max-width: $breakpoint-small) {
-    height: 55vh;
+  @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+    height: 75vh;
+    background-position: top center;
   }
 
   .content-wrap {
@@ -26,7 +28,7 @@
       max-width: none;
     }
 
-    @media screen and (max-width: $breakpoint-small) {
+    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
       height: calc(100% - 66px);
       max-width: none;
     }
@@ -42,7 +44,7 @@
         max-width: none;
       }
 
-      @media screen and (max-width: $breakpoint-small) {
+      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
         width: 100%;
         max-width: none;
       }
@@ -78,6 +80,7 @@
 
     @media screen and (max-width: $breakpoint-medium) {
       font-size: 14px;
+      line-height: 1.5em;
     }
   }
 
@@ -97,7 +100,7 @@
       opacity: .5;
     }
 
-    @media screen and (max-width: $breakpoint-small) {
+    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
       width: 80%;
       right: -45%;
       opacity: .5;
@@ -126,7 +129,7 @@
       font-size: 24px;
     }
 
-    @media screen and (max-width: $breakpoint-small) {
+    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
       font-size: 18px;
       padding: 20px 0;
     }
