--- a/scss/components/content/_assortment-container.scss
+++ b/scss/components/content/_assortment-container.scss
@@ -34,7 +34,7 @@
       font-size: 16px;
     }
 
-    @media screen and (max-width: $breakpoint-small) {
+    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
       font-size: 14px;
       line-height: 1.6em;
     }
@@ -47,7 +47,7 @@
       margin-top: 80px;
     }
 
-    @media screen and (max-width: $breakpoint-small) {
+    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
       flex-wrap: wrap;
       margin-top: 40px;
     }
@@ -69,7 +69,7 @@
       margin-right: 10px;
     }
 
-    @media screen and (max-width: $breakpoint-small) {
+    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
       min-height: 0;
       margin-right: 0;
       margin-bottom: 10px;
@@ -102,7 +102,7 @@
         margin-right: 0;
       }
 
-      @media screen and (max-width: $breakpoint-small) {
+      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
         max-height: none;
         height: 100%;
         min-height: 125px;
@@ -122,7 +122,6 @@
       width: 100%;
       background-image: linear-gradient(180deg, transparent, rgba(0,0,0,.8));
       text-shadow: 0px 1px 0px rgba(0,0,0,.26);
-      // text-transform: none;
 
       @media screen and (max-width: $breakpoint-medium-large) {
         padding: 60px 25px 25px;
@@ -160,7 +159,7 @@
       transition: $transition;
       z-index: 1;
 
-      @media screen and (max-width: $breakpoint-small) {
+      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
         left: auto;
         right: -10%;
       }
@@ -184,7 +183,7 @@
         font-size: 16px;
       }
 
-      @media screen and (max-width: $breakpoint-small) {
+      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
         padding: .8em 1em;
       }
 
@@ -198,7 +197,7 @@
         right: 1em;
         transform: translateY(-50%);
 
-        @media screen and (max-width: $breakpoint-small) {
+        @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
           display: inline-block;
         }
       }
