--- a/scss/components/woocommerce/_breadcrumbs.scss
+++ b/scss/components/woocommerce/_breadcrumbs.scss
@@ -5,7 +5,7 @@
     background: $color-neutral-brightest;
     box-shadow: 0px 2px 3px rgba(0,0,0,.125);
 
-    @media screen and (max-width: $breakpoint-small) {
+    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
       margin: 0 0;
     }
 
