--- a/scss/components/woocommerce/_woocommerce-order-received.scss
+++ b/scss/components/woocommerce/_woocommerce-order-received.scss
@@ -66,7 +66,7 @@
         }
       }
 
-      @media screen and (max-width: $breakpoint-small) {
+      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
         width: 100%;
         margin-bottom: 1.5em;
 
