final adjustments, theme is final

--- a/scss/components/content/_title-container.scss
+++ b/scss/components/content/_title-container.scss
@@ -11,6 +11,7 @@
   @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
     height: 75vh;
     background-position: top center;
+    background-attachment: inherit;
   }
 
   .content-wrap {
