--- a/scss/components/woocommerce/_product-archive.scss
+++ b/scss/components/woocommerce/_product-archive.scss
@@ -21,7 +21,7 @@
   }
 
   .product--small {
-    width: calc((100% / 4) - ((3 * 15px) / 4));
+    width: calc(((100% - 1px) / 4) - ((3 * 15px) / 4));
     margin-right: 15px;
     margin-bottom: 20px;
     background: $color-neutral-brightest;
