--- a/scss/components/wordpress/_search.scss
+++ b/scss/components/wordpress/_search.scss
@@ -10,6 +10,15 @@
     font-style: normal;
     letter-spacing: .125em;
     margin: 0;
+    word-wrap: break-word;
+
+    @media screen and (max-width: $breakpoint-medium) {
+      font-size: 21px;
+    }
+
+    @media screen and (max-width: $breakpoint-small) {
+      font-size: 18px;
+    }
   }
 
   h3 {
@@ -18,6 +27,10 @@
     font-weight: 700;
     letter-spacing: .125em;
     margin-bottom: .5em;
+
+    @media screen and (max-width: $breakpoint-medium) {
+      font-size: 16px;
+    }
   }
 
   .search-results {
@@ -27,16 +40,18 @@
     width: 100%;
   }
 
+  // .page,
+  // .post {
+  //   width: 100%;
+  //   margin-bottom: 1em;
+  //   background: $color-neutral-brightest;
+  //   padding: 1.5em;
+  //   box-shadow: 0px 2px 5px rgba(0,0,0,.25);
+  // }
+
+  .product,
   .page,
   .post {
-    width: 100%;
-    margin-bottom: 1em;
-    background: $color-neutral-brightest;
-    padding: 1.5em;
-    box-shadow: 0px 2px 5px rgba(0,0,0,.25);
-  }
-
-  .product {
     width: calc((100% / 4) - ((3 * 15px) / 4));
     margin-right: 15px;
     margin-bottom: 20px;
